# LtVideo

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: my_output_format.c  my_output_format.h  native-lib.cpp
app/src/main/cpp/gif/: dgif_lib.c  egif_lib.c  gif_err.c  gif_lib.h  gifalloc.c  quantize.c
app/src/main/res/anim/: imageview_scale.xml
app/src/main/res/drawable/: main_func_text_color.xml  shape_rectangle_border_w2_color_white_bg.xml  status_gradient.xml
app/src/main/res/layout/: activity_camera_preview.xml  activity_canvas.xml  activity_card_view.xml  activity_circle_indicator_view.xml  activity_coordinator_layout1.xml  activity_coordinator_layout2.xml  activity_coordinator_layout3.xml  activity_image_fix_w.xml  activity_image_view_dim.xml  activity_main.xml  activity_main2.xml  activity_matrix.xml  activity_page.xml  activity_picture_crop.xml  activity_picture_processing.xml  activity_play_g_i_f.xml  activity_setting.xml  activity_sticky_scroll_view.xml  activity_sticky_scroll_view2.xml  activity_sticky_scroll_view3.xml  activity_swipe_captcha_view.xml  activity_test.xml  activity_xfermode_view.xml  common_list_imageview_layout.xml  custom_crop_picture_view_layout.xml  fragment_list_layout.xml  item_color_matrix_layot.xml  item_coor_layout.xml  item_dical.xml  item_girl_layout.xml  item_image_layout.xml  item_scroller_view_layout.xml
app/src/main/res/menu/: menu_main.xml  menu_search.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values-v21/: styles.xml
(+96 files in other folders)
